--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
                         <li class="bullet_remove">
                             <div  class="experience_div">
                                 <p class="craftnotion">Craftnotion Private Limited</p>
-                                <p class="craftnotion">Feb 2022 - Present</p>
+                                <p class="craftnotion">Dec 2021 - Dec 2024</p>
                             </div>
                         </li>
                         <li>
