chore: Craftnotion Private Limited => Craftnotion

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
                     <ul>
                         <li class="bullet_remove">
                             <div  class="experience_div">
-                                <p class="craftnotion">Craftnotion Private Limited</p>
+                                <p class="craftnotion">Craftnotion</p>
                                 <p class="craftnotion">Dec 2021 - Dec 2024</p>
                             </div>
                         </li>
