chore: 🤖 change imp info

--- a/resume.html
+++ b/resume.html
@@ -151,14 +151,14 @@
                             <div title="Graduation">
                                 <p><strong>Software Development Residential Course</strong></p>
                                 <p>Navgurukul Foundation for Social Welfare Dharmshala(HP)</p>
-                                <p>2021 - 2022</p>
+                                <p> Jan 2021 - Nov 2021</p>
                             </div>
                         </li>
                         <li>
                             <div title="Graduation">
                                 <p><strong>Graduation</strong></p>
                                 <p>RTM Nagpur University</p>
-                                <p>2017 - 2020</p>
+                                <p>July 2017 - Sept 2020</p>
                             </div>
                         </li>
                     </ul>
@@ -177,8 +177,9 @@
                         <li>Redis</li>
                         <li>MongoDB</li>
                         <li>Next.js(Integrations, SSR, CSR & Site performance)</li>
-                        <li>Micro-services (NATS & redis-rpc,  RabbitMQ)</li>
+                        <li>Microservices (NATS & redis-rpc,  RabbitMQ)</li>
                         <li>ORM(typeorm)</li>
+                        <li>Versioning(GitHub, GitLab)</li>
                     </ul>
                 </div>        
                 <div class="strengths" title="Managerial skills">
