chore: 🤖 linkedin url

--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
                 <p title="Phone"><span class="tech">Phone No:</span> <a href="tel:+917798871464">+917798871464</a></p>
                 <p title="Email"><span class="tech">Email:</span><a href="mailto:mungusmareamol@gmailcom"> mungusmareamol@gmail.com</a> </p>
                 <p title="Address"><span class="tech">Address:</span>Nagpur, Maharashtra</p>
-                <p title="Links"><span class="tech">Links:</span> <a href="https://github.com/amolmungusmare" title="GitHub">GitHub</a>, <a href="https://in.linkedin.com/in/amol-mungusmare-786b7620a" title="LinkedIn">LinkedIn</a></p>
+                <p title="Links"><span class="tech">Links:</span> <a href="https://github.com/amolmungusmare" title="GitHub">GitHub</a>, <a href="https://www.linkedin.com/in/amol-mungusmare-nodejs-microservices-expert/" title="LinkedIn">LinkedIn</a></p>
             </div>
         </header>
         <section>
