chore: 🤖 update skills

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
                 <div class="about"  title="About">
                     <h2>About Me</h2>
                     <p>
-                        Backend Developer with around <strong> 3 years </strong> of experience building web applications using <strong>Node.js, Adonis.js, Nest.js, and Express.js</strong> Delivered <strong>12+</strong> projects, specializing in API development for Microservices, Payments, Chat systems, and Data management, including CSV/XLS file import/export. Skilled in integrating Next.js, as well as implementing cron-based automated services and queue-based microtask management.
+                        Backend Developer with around <strong> 3.6 years </strong> of experience building web applications using <strong>Node.js, Adonis.js, Nest.js, and Express.js</strong> Delivered <strong>12+</strong> projects, specializing in API development for Microservices, Payments, Chat systems, and Data management, including CSV/XLS file import/export. Skilled in integrating Next.js, as well as implementing cron-based automated services and queue-based microtask management.
                     </p>
                 </div>
                 <div class="experience" title="Experience">
@@ -173,13 +173,16 @@
                         <li>Nest.js</li>
                         <li>Strapi.js</li>
                         <li>Express.js</li>
+                        <li>Hapi.js</li>
                         <li>MySQL</li>
                         <li>Redis</li>
                         <li>MongoDB</li>
                         <li>Next.js(Integrations, SSR, CSR & Site performance)</li>
-                        <li>Microservices (NATS & redis-rpc,  RabbitMQ)</li>
-                        <li>ORM(typeorm)</li>
+                        <li>Microservices (NATS,  RabbitMQ)</li>
+                        <li>ORM(typeorm, Sequelize, Lucid)</li>
                         <li>Versioning(GitHub, GitLab)</li>
+                        <li>Payments(Stripe, Paytm & Razorpay)</li>
+                        <li>AWS(EC2, S3)</li>
                     </ul>
                 </div>        
                 <div class="strengths" title="Managerial skills">
