feat: 🎸 added firebase

--- a/resume.html
+++ b/resume.html
@@ -183,6 +183,7 @@
                         <li>Versioning(GitHub, GitLab)</li>
                         <li>Payments(Stripe, Paytm & Razorpay)</li>
                         <li>AWS(EC2, S3)</li>
+                        <li>Firebase</li>
                     </ul>
                 </div>        
                 <div class="strengths" title="Managerial skills">
