chore: 🤖 updated craftnotion experience

--- a/resume.html
+++ b/resume.html
@@ -40,32 +40,22 @@
                         </li>
                         <li>
                             <div class="experience_div">
-                                <p>Participated in Agile/Scrum meetings, collaborating with the CEO, CTO, and clients to influence technology decisions and project management.</p>
+                                <p>Collaborated in Agile/Scrum meetings with the CEO, CTO, and clients, contributing to technology decisions and overall project management.</p>
                             </div>
                         </li>
                         <li>
                             <div class="experience_div">
-                                <p>Developed and integrated payment gateways using Stripe and Paytm, along with implementing two-way and group chat systems.</p>
+                                <p>Built and integrated payment gateways (Stripe, Paytm) and implemented two-way and group chat systems to enhance user interaction and monetization features.</p>
                             </div>
                         </li>
                         <li>
                             <div class="experience_div">
-                                <p>Conducted unit and integration testing using Jest and Japa, ensuring code quality and API reliability.</p>
+                                <p>Ensured code quality by conducting unit and integration testing with Jest and Japa, and automated incentive tracking by integrating Asana with Google Sheets via Google Apps Script.</p>
                             </div>
                         </li>
                         <li>
                             <div class="experience_div">
-                                <p>Automated incentive tracking by integrating Asana with Google Sheets through Google Apps Script.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="experience_div">
-                                <p>Mentored 6-7 interns, providing guidance in coding, reviewing their work, and authoring technical documentation.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="experience_div">
-                                <p>Created reusable npm packages to streamline JavaScript-based project setups and contributed to external npm packages.</p>
+                                <p>Mentored 9–10 interns, reviewed code, authored technical documentation, and created reusable npm packages to streamline project setups and contribute to external libraries.</p>
                             </div>
                         </li>
                     </ul>
