feat: 🎸 added bluecs experience

--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
                 <div class="about"  title="About">
                     <h2>About Me</h2>
                     <p>
-                        Backend Developer with around <strong> 3.6 years </strong> of experience building web applications using <strong>Node.js, Adonis.js, Nest.js, and Express.js</strong> Delivered <strong>12+</strong> projects, specializing in API development for Microservices, Payments, Chat systems, and Data management, including CSV/XLS file import/export. Skilled in integrating Next.js, as well as implementing cron-based automated services and queue-based microtask management.
+                        Backend Developer with around <strong> 3.5 years </strong> of experience building web applications using <strong>Node.js, Adonis.js, Nest.js, and Express.js</strong> Delivered <strong>12+</strong> projects, specializing in API development for Microservices, Payments, Chat systems, and Data management, including CSV/XLS file import/export. Skilled in integrating Next.js, as well as implementing cron-based automated services and queue-based microtask management.
                     </p>
                 </div>
                 <div class="experience" title="Experience">
@@ -34,7 +34,7 @@
                     <ul>
                         <li class="bullet_remove">
                             <div  class="experience_div">
-                                <p class="craftnotion">Craftnotion</p>
+                                <p class="craftnotion_name">Craftnotion</p>
                                 <p class="craftnotion">Dec 2021 - Dec 2024</p>
                             </div>
                         </li>
@@ -56,6 +56,34 @@
                         <li>
                             <div class="experience_div">
                                 <p>Mentored 9–10 interns, reviewed code, authored technical documentation, and created reusable npm packages to streamline project setups and contribute to external libraries.</p>
+                            </div>
+                        </li>
+                    </ul> <br>
+                    <ul>
+                        <li class="bullet_remove">
+                            <div  class="experience_div">
+                                <p class="craftnotion_name">BlueCS Limited</p>
+                                <p class="craftnotion">Feb 2025 - Presend</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience_div">
+                                <p>Attended daily Scrum meetings, took tasks from the PM, explained them to juniors, and helped resolve their blockers.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience_div">
+                                <p>Integrated Razorpay for secure payment processing.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience_div">
+                                <p>Built chat features: delete (DeletedChatList), clear (ClearAllChat), chat locks, and Firebase notifications for calls.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience_div">
+                                <p>Developed job posts, connections/following, and reels functionality.</p>
                             </div>
                         </li>
                     </ul>
