feat: 🎸 updated bluecs exp

--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,20 @@
                 <div  class="projects" title="Projects">
                     <p class="project_title">Projects</p>
                     <div class="project_wrapper">
-                        <div class="project_container">    
+                        <div class="project_container"> 
+                            <div title="BlueEra" class="project" key="1">
+                                <div class="project_line_1"></div>
+                                <div class="project_wrap">                                    
+                                    <h2>BlueEra</h2>
+                                    <div class="technologies">
+                                        <div>
+                                            <p><span class="tech">Technologies:</span> Express.js, MongoDB, Razorpay, Socket.io, Firebase & Elasticsearch</p>
+                                        </div>
+                                      <!-- Add more technologies as needed -->
+                                    </div>
+                                    <p>Contributed to the backend development of Blueera, designing core features using Node.js. Developed real-time chat functionality (deletion, clearing, locks), integrated Firebase for call notifications, and Razorpay for payments. Built modules for job posts, user connections, and reels. Actively participated in daily scrums and supported junior developers.</p>
+                                </div>
+                            </div>    
                             <div title="Travel Pro" class="project" key="2">
                                 <div class="project_line_2"></div>
                                 <div class="project_wrap">
@@ -143,20 +156,7 @@
                                     </div>
                                     <p>Developed APIs with Strapi.js and integrated them with Next.js for a wellness blog. Enhanced SEO, performance, and appearance for an optimal browsing experience.</p>
                                 </div>
-                            </div>              
-                            <div title="Farmstax" class="project" key="1">
-                                <div class="project_line_1"></div>
-                                <div class="project_wrap">                                    
-                                    <h2>Farmstax</h2>
-                                    <div class="technologies">
-                                        <div>
-                                            <p><span class="tech">Technologies:</span> Nestjs, MongoDB</p>
-                                        </div>
-                                      <!-- Add more technologies as needed -->
-                                    </div>
-                                    <p>Developed MongoDB management APIs with NestJS, ensuring efficient backend operations and seamless frontend integration to enhance user experience in land asset transactions.</p>
-                                </div>
-                            </div>   
+                            </div>                
                         </div>
                     </div>
                 </div> 
