--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
             <div  title="Name" class="name_class">
                 <div class="f_name">Amol</div>
                 <div class="l_name">Mungusmare</div>
-                <div title="Role" class="role_name">Sr. Backend Engineer</div>
+                <div title="Role" class="role_name">Node.js developer</div>
             </div>
             <div title="Contact Detail" class="contact_info">
                 <p title="Phone"><span class="tech">Phone No:</span> <a href="tel:+917798871464">+917798871464</a></p>
@@ -63,12 +63,12 @@
                         <li class="bullet_remove">
                             <div  class="experience_div">
                                 <p class="craftnotion_name">BlueCS Limited</p>
-                                <p class="craftnotion">Feb 2025 - Presend</p>
+                                <p class="craftnotion">Feb 2025 – Present</p>
                             </div>
                         </li>
                         <li>
                             <div class="experience_div">
-                                <p>Attended daily Scrum meetings, took tasks from the PM, explained them to juniors, and helped resolve their blockers.</p>
+                                <p>Attended daily Scrum meetings, took tasks from the PM, explained them to juniors, and helped resolve blockers.</p>
                             </div>
                         </li>
                         <li>
@@ -98,11 +98,11 @@
                                     <h2>BlueEra</h2>
                                     <div class="technologies">
                                         <div>
-                                            <p><span class="tech">Technologies:</span> Express.js, MongoDB, Razorpay, Socket.io, Firebase & Elasticsearch</p>
+                                            <p><span class="tech">Technologies:</span>Express.js, MongoDB, RabbitMQ, Razorpay, Socket.io, Firebase & Elasticsearch</p>
                                         </div>
                                       <!-- Add more technologies as needed -->
                                     </div>
-                                    <p>Contributed to the backend development of Blueera, designing core features using Node.js. Developed real-time chat functionality (deletion, clearing, locks), integrated Firebase for call notifications, and Razorpay for payments. Built modules for job posts, user connections, and reels. Actively participated in daily scrums and supported junior developers.</p>
+                                    <p>Contributed to backend development of BlueEra, designing core features using Node.js. Developed real-time chat functionality (deletion, clearing, locks), integrated Firebase for call notifications, and Razorpay for payments. Built modules for job posts, user connections, and reels. Actively participated in daily scrums and supported junior developers.</p>
                                 </div>
                             </div>    
                             <div title="Travel Pro" class="project" key="2">
@@ -198,7 +198,7 @@
                         <li>Next.js(Integrations, SSR, CSR & Site performance)</li>
                         <li>Microservices (NATS,  RabbitMQ)</li>
                         <li>ORM(typeorm, Sequelize, Lucid)</li>
-                        <li>Versioning(GitHub, GitLab)</li>
+                        <li>Versioning(GitHub, GitLab, BitBucket)</li>
                         <li>Payments(Stripe, Paytm & Razorpay)</li>
                         <li>AWS(EC2, S3)</li>
                         <li>Firebase</li>
